--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -257,9 +257,9 @@
                                             경상남도 하동군 화개면 부춘길 22
                                         </li>
                                         <!--네이버지도 표시할 공간-->
-                                        <li>
-                                            <div id="map2" style="width:100%;height:350px;"></div>
-                                        </li>
+<!--                                        <li>-->
+<!--                                            <div id="map2" style="width:100%;height:350px;"></div>-->
+<!--                                        </li>-->
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" type="button" onclick="location.href = 'https://map.kakao.com/link/to/경상남도 하동군 화개면 부춘길 22,35.166697110145506, 127.64750399800869'">
                                          길찾기
@@ -498,22 +498,22 @@
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-            <script>
-                var mapContainer2 = document.getElementById('map2'), // 지도를 표시할 div
-                    mapOption2 = {
-                        center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
-                        level: 3 // 지도의 확대 레벨
-                    };
-                var map2 = new kakao.maps.Map(mapContainer2, mapOption2); // 지도를 생성합니다
-                // 마커가 표시될 위치입니다
-                var markerPosition = new kakao.maps.LatLng(33.450701, 126.570667);
-                // 마커를 생성합니다
-                var marker = new kakao.maps.Marker({
-                    position: markerPosition
-                });
-                // 마커가 지도 위에 표시되도록 설정합니다
-                marker.setMap(map2);
-            </script>
+<!--        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>-->
+<!--            <script>-->
+<!--                var mapContainer2 = document.getElementById('map2'), // 지도를 표시할 div-->
+<!--                    mapOption2 = {-->
+<!--                        center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표-->
+<!--                        level: 3 // 지도의 확대 레벨-->
+<!--                    };-->
+<!--                var map2 = new kakao.maps.Map(mapContainer2, mapOption2); // 지도를 생성합니다-->
+<!--                // 마커가 표시될 위치입니다-->
+<!--                var markerPosition = new kakao.maps.LatLng(33.450701, 126.570667);-->
+<!--                // 마커를 생성합니다-->
+<!--                var marker = new kakao.maps.Marker({-->
+<!--                    position: markerPosition-->
+<!--                });-->
+<!--                // 마커가 지도 위에 표시되도록 설정합니다-->
+<!--                marker.setMap(map2);-->
+<!--            </script>-->
     </body>
 </html>
