--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -477,19 +477,19 @@
             </div>
         </div>
         <!-- userId setting modal popup -->
-        <div id="container" class="popup-container">
-            <div class="popup">
-                <button id="close" class="close">
-                    X
-                </button>
-                <h1>📝사용자 ID 등록하기</h1>
-                <p>옥외패널에서 제공한 사용자의 아이디를 <br/> 등록한 후에, 관련 서비스를 제공받을 수 있습니다.</p>
-                <div>
-                    <input type="text" id="myid" placeholder="아이디를 숫자로 입력하세요.">
-                </div>
-                <button class="cta" onclick="setMyId()">등록하기</button>
-            </div>
-        </div>
+<!--        <div id="container" class="popup-container">-->
+<!--            <div class="popup">-->
+<!--                <button id="close" class="close">-->
+<!--                    X-->
+<!--                </button>-->
+<!--                <h1>📝사용자 ID 등록하기</h1>-->
+<!--                <p>옥외패널에서 제공한 사용자의 아이디를 <br/> 등록한 후에, 관련 서비스를 제공받을 수 있습니다.</p>-->
+<!--                <div>-->
+<!--                    <input type="text" id="myid" placeholder="아이디를 숫자로 입력하세요.">-->
+<!--                </div>-->
+<!--                <button class="cta" onclick="setMyId()">등록하기</button>-->
+<!--            </div>-->
+<!--        </div>-->
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
