테스트준비

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,9 +46,9 @@
         <header class="masthead" id="my_weather">
             <div class="container">
                 <div class="masthead-subheading">오늘 당신의 마음의 날씨는?</div>
-                <div class="masthead-heading text-uppercase">맑음</div>
+                <div class="masthead-heading text-uppercase">비</div>
                 <div class="masthead-emtion">
-                    <img src="/bootstrap/img/feel/smile.png" width=120>
+                    <img src="/bootstrap/img/feel/sad.png" width=120>
                 </div>
                 <p class="text-muted"> </p>
                 <div>
@@ -70,20 +70,20 @@
                     <div class="col-md-4">
                         <img src="/bootstrap/img/feel/smile.png" width=120>
                         <h4 class="my-3">맑음</h4>
-                        <h5 class="text-muted">오늘 하루의 기분이 "맑음"인 사용자는 </br> 10명입니다.</h5>
+                        <h5 class="text-muted">오늘 하루의 기분이 "맑음"인 사용자는 </br> 3명입니다.</h5>
                         <!-- <h5 class="text-muted">* 명입니다.</h5> -->
                     </div>
                     <div class="col-md-4">
                         <img src="/bootstrap/img/feel/none.png" width=120>
                         <h4 class="my-3">흐림</h4>
-                        <h5 class="text-muted">오늘 하루의 기분이 "흐림"인 사용자는 </br> 15명입니다.</h5>
+                        <h5 class="text-muted">오늘 하루의 기분이 "흐림"인 사용자는 </br> 5명입니다.</h5>
                         <!-- <h5 class="text-muted">* 명입니다.</h5> -->
 
                     </div>
                     <div class="col-md-4">
                         <img src="/bootstrap/img/feel/sad.png" width=120>
                         <h4 class="my-3">비</h4>
-                        <h5 class="text-muted">오늘 하루의 기분이 "비"인 사용자는 </br>8명입니다.</h5>
+                        <h5 class="text-muted">오늘 하루의 기분이 "비"인 사용자는 </br>3명입니다.</h5>
                         <!-- <h5 class="text-muted">* 명입니다.</h5> -->
 
                     </div>
@@ -155,7 +155,7 @@
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="/bootstrap/img/gangneung.JPG" alt="..."/></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="/bootstrap/img/feel/smile.png" alt="..."/></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <a class="portfolio-link" data-bs-toggle="modal" href="#history01">
@@ -167,7 +167,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="https://healing4ubucket.s3.ap-northeast-2.amazonaws.com/AD/gochang_activity.JPG" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="/bootstrap/img/feel/smile.png" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <a class="portfolio-link" data-bs-toggle="modal" href="#history02">
@@ -175,7 +175,7 @@
                                     <h4 class="subheading">시대를 거슬러가는 여행, 고창군</h4>
                                 </a>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">전라북도 고창군 고창읍 모양성로 1</p></div>
+                            <div class="timeline-body"><p class="text-muted">선운사 전라북도 고창군 아산면 선운사로 250</p></div>
                         </div>
                     </li>
                     <li>
@@ -184,10 +184,10 @@
                             <div class="timeline-heading">
                                 <a class="portfolio-link" data-bs-toggle="modal" href="#history03">
                                     <!-- <h4>가장 최근에 본 광고 3</h4> -->
-                                    <h4 class="subheading">민식님한테 받기</h4>
+                                    <h4 class="subheading">더 많은 광고를 제공받으세요!</h4>
                                 </a>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">address</p></div>
+                            <div class="timeline-body"><p class="text-muted"></p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -250,18 +250,18 @@
                                     <ul class="list-inline">
                                         <li>
                                             <strong>전화번호:</strong>
-                                            +82558847760
+                                            055-884-7760
                                         </li>
                                         <li>
                                             <strong>위치:</strong>
-                                            경상남도 하동군 화개면 부춘길 22
+                                            경상남도 하동군 화개면 부춘리 1126-1
                                         </li>
                                         <!--네이버지도 표시할 공간-->
 <!--                                        <li>-->
 <!--                                            <div id="map2" style="width:100%;height:350px;"></div>-->
 <!--                                        </li>-->
                                     </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" type="button" onclick="location.href = 'https://map.kakao.com/link/to/경상남도 하동군 화개면 부춘길 22,35.166697110145506, 127.64750399800869'">
+                                    <button class="btn btn-primary btn-xl text-uppercase" type="button" onclick="location.href = 'https://map.kakao.com/link/to/경상남도 하동군 화개면 부춘리 1126-1,35.166697110145506, 127.64750399800869'">
                                          길찾기
                                     </button>
                                     <i class="fas fa-times me-1"></i>
@@ -306,14 +306,14 @@
                                     <ul class="list-inline">
                                         <li>
                                             <strong>전화번호:</strong>
-                                            +82558847760
+                                            063-561-1422
                                         </li>
                                         <li>
                                             <strong>위치:</strong>
-                                            전라북도 고창군 고창읍 모양성로 1
+                                            선운사 전라북도 고창군 아산면 선운사로 250
                                         </li>
                                     </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" type="button" onclick="location.href = 'https://map.kakao.com/link/to/전라북도 고창군 고창읍 모양성로 1,35.4309165627322, 126.70480299813288'">
+                                    <button class="btn btn-primary btn-xl text-uppercase" type="button" onclick="location.href = 'https://map.kakao.com/link/to/선운사, 35.49726521134183, 126.57865139823893'">
                                         <!-- x 아이콘 표시 -->
                                         <!-- <i class="fas fa-times me-1"></i> -->
                                         길찾기
@@ -342,14 +342,14 @@
                                     <ul class="list-inline">
                                         <li>
                                             <strong>전화번호:</strong>
-                                            +82333328061
+                                            033-332-8061
                                         </li>
                                         <li>
                                             <strong>위치:</strong>
                                             강원도 평창군 대관령면 꽃밭양지길 458-23
                                         </li>
                                     </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" type="button" onclick="location.href = 'https://map.kakao.com/link/to/강원도 평창군 대관령면 꽃밭양지길 458-23,37.70570013323462, 128.72068346934853'">
+                                    <button class="btn btn-primary btn-xl text-uppercase" type="button" onclick="location.href = 'https://map.kakao.com/link/to/대관령 하늘목장,37.70607714690395, 128.720597992412'">
                                         <!-- x 아이콘 표시 -->
                                         <!-- <i class="fas fa-times me-1"></i> -->
                                         길찾기
@@ -386,14 +386,14 @@
                                     <ul class="list-inline">
                                         <li>
                                             <strong>전화번호:</strong>
-                                            +82333328061
+                                            033-332-8061
                                         </li>
                                         <li>
                                             <strong>위치:</strong>
                                             강원도 평창군 대관령면 꽃밭양지길 458-23
                                         </li>
                                     </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" type="button" onclick="location.href = 'https://map.kakao.com/link/to/강원도 평창군 대관령면 꽃밭양지길 458-23,37.710399885144824, 128.72752791167756'">
+                                    <button class="btn btn-primary btn-xl text-uppercase" type="button" onclick="location.href = 'https://map.kakao.com/link/to/대관령 하늘목장,37.70607714690395, 128.720597992412'">
                                         길찾기
                                     </button>
                                     <i class="fas fa-times me-1"></i>
