--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -515,5 +515,6 @@
 <!--                // 마커가 지도 위에 표시되도록 설정합니다-->
 <!--                marker.setMap(map2);-->
 <!--            </script>-->
+            <script src = "/bootstrap/js/scripts.js"></script>
     </body>
 </html>
