--- a/src/main/resources/templates/modal.mustache
+++ b/src/main/resources/templates/modal.mustache
@@ -26,6 +26,7 @@
                 <input type="text" id="myid" placeholder="아이디를 숫자로 입력하세요."/>
             </div>
             <button class="cta">등록하기</button>
+            <a href=""
         </div>
     </div>
 </div>
