--- a/src/main/resources/templates/index2.mustache
+++ b/src/main/resources/templates/index2.mustache
@@ -93,6 +93,64 @@
 </section>
 <!-- portfolio Grid-->
 
+<!-- history-->
+<section class="page-section" id="history">
+    <div class="container">
+        <div class="text-center">
+            <h2 class="section-heading text-uppercase">History</h2>
+            <h3 class="section-subheading text-muted">당신의 발걸음을 광고를 통해서 확인하세요!</h3>
+        </div>
+        <ul class="timeline">
+            <li>
+                <div class="timeline-image"><img class="rounded-circle img-fluid" src="/bootstrap/img/feel/smile.png" alt="..."/></div>
+                <div class="timeline-panel">
+                    <div class="timeline-heading">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#history01">
+                            <h4 class="subheading">{{historyName1}}</h4>
+                        </a>
+                    </div>
+                    <div class="timeline-body"><p class="text-muted">{{historyAddress1}}</p></div>
+                </div>
+            </li>
+
+            <li class="timeline-inverted">
+                <div class="timeline-image"><img class="rounded-circle img-fluid" src="/bootstrap/img/feel/smile.png" alt="..." /></div>
+                <div class="timeline-panel">
+                    <div class="timeline-heading">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#history02">
+                            <h4 class="subheading">{{historyName2}}</h4>
+                        </a>
+                    </div>
+                    <div class="timeline-body"><p class="text-muted">{{historyAddress2}}</p></div>
+                </div>
+            </li>
+
+            <li>
+                <div class="timeline-image"><img class="rounded-circle img-fluid" src="/bootstrap/img/feel/smile.png" alt="..." /></div>
+                <div class="timeline-panel">
+                    <div class="timeline-heading">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#history03">
+                            <h4 class="subheading">{{historyName3}}</h4>
+                        </a>
+                    </div>
+                    <div class="timeline-body"><p class="text-muted">{{historyAddress3}}</p></div>
+                </div>
+            </li>
+            
+            <li class="timeline-inverted">
+                <div class="timeline-image">
+                    <h4>
+                        당신의
+                        <br />
+                        기억에
+                        <br />
+                        닿기를
+                    </h4>
+                </div>
+            </li>
+        </ul>
+    </div>
+</section>
 <!-- Footer-->
 <footer class="footer py-4">
     <div class="container">
@@ -102,7 +160,113 @@
     </div>
     </div>
 </footer>
-
+<!-- History modal-->
+<div class="portfolio-modal modal fade" id="history01" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="close-modal" data-bs-dismiss="modal"><img src="/bootstrap/img/close-icon.svg" alt="Close modal" /></div>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8">
+                        <div class="modal-body">
+                            <!-- Project details-->
+                            <h2 class="text-uppercase">최근 History</h2>
+                            <p class="item-intro text-muted">{{historyName1}}</p>
+                            <img class="img-fluid d-block mx-auto" src="https://healing4ubucket.s3.ap-northeast-2.amazonaws.com/AD/gangneung.JPG" alt="..." />
+                            <p>{{historyDetail1}} </p>
+                            <ul class="list-inline">
+                                <li>
+                                    <strong>전화번호:</strong>
+                                    {{historyPhone1}}
+                                </li>
+                                <li>
+                                    <strong>위치:</strong>
+                                    {{historyAddress1}}
+                                </li>
+                            </ul>
+                            <button class="btn btn-primary btn-xl text-uppercase" type="button" onclick="location.href = '{{historyLink1}}'">
+                                길찾기
+                            </button>
+                            <i class="fas fa-times me-1"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- history item 2 modal popup-->
+<div class="portfolio-modal modal fade" id="history02" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="close-modal" data-bs-dismiss="modal"><img src="/bootstrap/img/close-icon.svg" alt="Close modal" /></div>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8">
+                        <div class="modal-body">
+                            <!-- advertisement details-->
+                            <h2 class="text-uppercase">최근 History</h2>
+                            <p class="item-intro text-muted">{{historyName2}}</p>
+                            <img class="img-fluid d-block mx-auto" src="/bootstrap/img/feel/smile.png" alt="..." />
+                            <p>{{historyDetail2}}</p>
+                            <ul class="list-inline">
+                                <li>
+                                    <strong>전화번호:</strong>
+                                    {{historyPhone2}}
+                                </li>
+                                <li>
+                                    <strong>위치:</strong>
+                                    {{historyAddress2}}
+                                </li>
+                            </ul>
+                            <button class="btn btn-primary btn-xl text-uppercase" type="button" onclick="location.href = '{{historyLink2}}'">
+                                <!-- x 아이콘 표시 -->
+                                <!-- <i class="fas fa-times me-1"></i> -->
+                                길찾기
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- history item 3 modal popup-->
+<div class="portfolio-modal modal fade" id="history02" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="close-modal" data-bs-dismiss="modal"><img src="/bootstrap/img/close-icon.svg" alt="Close modal" /></div>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8">
+                        <div class="modal-body">
+                            <!-- advertisement details-->
+                            <h2 class="text-uppercase">최근 History</h2>
+                            <p class="item-intro text-muted">{{historyName3}}</p>
+                            <img class="img-fluid d-block mx-auto" src="/bootstrap/img/feel/smile.png" alt="..." />
+                            <p>{{historyDetail3}}</p>
+                            <ul class="list-inline">
+                                <li>
+                                    <strong>전화번호:</strong>
+                                    {{historyPhone3}}
+                                </li>
+                                <li>
+                                    <strong>위치:</strong>
+                                    {{historyAddress3}}
+                                </li>
+                            </ul>
+                            <button class="btn btn-primary btn-xl text-uppercase" type="button" onclick="location.href = '{{historyLink3}}'">
+                                <!-- x 아이콘 표시 -->
+                                <!-- <i class="fas fa-times me-1"></i> -->
+                                길찾기
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
